--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -8,6 +8,10 @@
 
 </head>
 <th:block layout:fragment="content">
-	<div class="cont-body"></div>
+	<div class="fram">
+		<div class="shadow">
+			
+		</div>
+	</div>
 </th:block>
 </html>
