--- a/src/main/resources/templates/admin/fragment/admin_menu.html
+++ b/src/main/resources/templates/admin/fragment/admin_menu.html
@@ -2,7 +2,7 @@
     <ul class="menu-list">
         <li class="menu-elemt">회원관리
         	<ul class="sub-menu-lst dn">
-        		<li><a href="/admin/freedom/list">회원관리</a></li>
+        		<li><a href="/admin/">회원관리</a></li>
         		<li><a href="/admin/">탈퇴회원</a></li>
         	</ul>
         </li>
@@ -11,9 +11,9 @@
         <li class="menu-elemt">게시판관리
         	<ul class="sub-menu-lst dn">
         		<li><a href="/admin/">PHOTO ALBUM</a></li>
-        		<li><a href="/admin/">자유게시판</a></li>
+        		<li><a href="/admin/freedom/list">자유게시판</a></li>
         		<li><a href="/admin/">공지사항</a></li>
-        	</ul>        
+        	</ul>
         </li>
     </ul>                                
 </div>
