--- a/src/main/resources/templates/user/freedom/regist.html
+++ b/src/main/resources/templates/user/freedom/regist.html
@@ -112,10 +112,10 @@ const regist = function() {
                     </table>
                 </div>
             </div>
-            <div class="data-btn-area mg-top2">
-            	<button type="button" class="btn-write mg-rg7">등록</button>
-            	<button type="button" class="btn-list mg-rg1">목록</button>
-            </div>              
+            <div class="data-btn-area mg-top2 mg-bottom1">
+            	<button type="button" class="btn-list mg-rg15">목록</button>
+            	<button type="button" class="btn-write mg-rg1">등록</button>
+            </div>
         </div>
         
 </th:block>
