--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -7,7 +7,6 @@ body{overflow-x: hidden;}
 
 
 /* common */
-
 .dn{display:none;}
 
 /* header */
@@ -23,6 +22,8 @@ body{overflow-x: hidden;}
 .prof-link{float: left; width: 70%; margin-top: 5%; margin-left: 2%; text-decoration: none; text-align: center; color: black;}
 .prof-login{float: left; width: 100%; height: 100%; display: none;}
 
+.location{display:block; width: 80%; margin: 40px auto 10px auto;}
+
 /* side menu */
 .menu-group{float: left; width: 10%; height: 100%; background-color: #efefefef;}
 .menu-list{float: left; width: 90%; font-size: 1.15em; text-align: center; margin: 2% 5% 2% 5%; border-radius: 5px; background-color: white;}
@@ -34,4 +35,28 @@ body{overflow-x: hidden;}
 /* contents */
 .conts{float: left; width: 100%; height: 91.777%;}
 .fram{float: left; width: 89.888%; height: 100%;}
-.shadow{float:left; width: 97%; height: 95%; margin:1.5% 1.5% 1.5% 1.5%; border-radius:3px; box-shadow: 2px 2px 0.5em #ccc;}
+.search-area{display:block; width: 80%; height:100px; margin: 30px auto 0 auto; border: solid 3px #ffdfdf; border-radius: 5px;}
+.sch-row{display:block; width: 80%; margin: 0px auto 0 auto; height:30px; padding: 10px 0 5px 0;}
+.dt-div{float:left; width: 150px; height:30px;}
+.date-input{width:100px; height: 30px; border: solid 1px #ffdfdf; margin: 0px 10px 0px 10px;}
+.date-input:focus{outline:solid 1px #ffa6a6;}
+.data-tilde{width: 30px; height:30px; color: #da8787;}
+
+.sch-row > label{float:left; height: 30px; color: #003745; padding:5px 20px 5px 30px;}
+.sch-row > input{float:left; height: 30px; border: solid 1px #ffdfdf;}
+.sch-row > input:focus {outline:solid 1px #ffa6a6;}
+
+.sch-btn{float: right; width: 80px; height: 30px; background-color: #ffdfdf; border: solid 1px #ffdfdf; border-radius: 3px;}
+
+.letterpress{display:block; width: 80%; margin: 10px auto 0 auto;}
+.letterpress table{float: left; width: 100%; margin-bottom: 30px;}
+.letterpress table thead{background-color: #ffdfdf;}
+.letterpress table tr td{text-align: center;}
+.letterpress table tr td .bttn-modify{width: 40px; background-color: white; height:25px; color:#ab3434; border: solid 1px #ab3434; border-radius: 3px;}
+.letterpress table tr td .bttn-del{width: 40px; background-color: #ab3434; height:25px; color:white; border: solid 1px #ab3434; border-radius: 3px;}
+
+.pagenation{display:block; width: 80%; height:100px; display: block; margin: 0px auto 0 auto;}
+.page-group{position: relative; display:block; text-align: center;}
+.page-num{position: relative; display:inline-block; width: 40px; height: 30px; padding-top:10px; border: solid 1px #ffdfdf; cursor: pointer;}
+.page-num:hover{background-color: #ffdfdf;}
+.pagenation .active{background-color: #ffdfdf;}
