--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -3,7 +3,7 @@
 
 .basic-top{float: left; width: 100%; height: 400px; background-image: url(/img/section1.png);}
 .section{float:left; width:100%; height:300px;}
-.basic-conts{float:left; width: 100%; height:50%;}
+.basic-conts{float:left; width: 100%;}
 
 .f-left{float: left;}
 
@@ -14,24 +14,24 @@
 .w10{width: 10%;}
 
 .mg-lf10{margin-left: 10%;}
+.mg-lf20{margin-left: 20%;}
+.mg-lf30{margin-left: 30%;}
+.mg-lf50{margin-left: 42%;}
+
 .mg-rg10{margin-right: 10%;}
 .mg-rg15{margin-right: 15%;}
 .mg-rg20{margin-right: 20%;}
-
 .mg-rg8{margin-right: 8%;}
 .mg-rg7{margin-right: 7%;}
 .mg-rg6{margin-right: 6%;}
 .mg-rg5{margin-right: 5%;}
 .mg-rg1{margin-right: 1%;}
 
-.mg-lf20{margin-left: 20%;}
-.mg-lf30{margin-left: 30%;}
-.mg-lf50{margin-left: 42%;}
-
 .mg-top1{margin-top: 1%;}
 .mg-top2{margin-top: 2%;}
 .mg-top10{margin-top: 10%;}
 
+.mg-bottom1{margin-bottom: 1%;}
 .mg-bottom2{margin-bottom: 2%;}
 
 .txt-center{text-align:center;}
@@ -69,9 +69,10 @@
 /* paging */
 .pagenation-area{float: left; width:100%; height:60px; padding-bottom: 1%;}
 .numbers-of-page{position:relative; width:50%; height:60px; margin: 0 auto 0 auto; list-style: none; text-align: center;}
-.numbers-of-page li{display:inline-block; width:40px; height:35px; color:#99aa88; border:solid #99aa88 1px; padding-top: 1%;}
-.page-num:hover {background-color: #99aa88; color: #ccddbb;}
-
+.numbers-of-page li{display:inline-block; width:40px; height:35px; border:solid #99aa88 1px; padding-top: 1%;}
+.page-num:not(.active){color: #99aa88;}
+.page-num:hover{background-color: #99aa88; color: #ccddbb;}
+.active{background-color: #99aa88; color: white;}
 
 /* Modal */
 .file-upload-modal{
